<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eHonk.NotifyFragment" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:scaleType="center"
        android:src="@drawable/ehonk_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/register_info"
            style="@style/eHonkTextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/vehicule" />

        <TextView
            android:id="@+id/license_info"
            style="@style/eHonkTextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:background="@drawable/back_border"
            android:maxEms="15"
            android:padding="10dp"
            android:text="" />

        <TextView
            android:id="@+id/change_license"
            style="@style/eHonkTextStyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:text="@string/change_license" />
    </LinearLayout>

    <Button
        android:id="@+id/stuck_button"
        style="@style/eHonkButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/stuck_button" />

    <Button
        android:id="@+id/notification_list_button"
        style="@style/eHonkButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/notifications_list_button" />

</LinearLayout>